# manipulator-project-overview

./: Readme.md  架构.xmind
CameraClibrat/: Readme.md  requirements.txt
CameraClibrat/test/: CAMERA_MATRIX.txt  depth_scale.pkl  distCoeffs.pkl  intrinsics.pkl
CameraDemo/Orbbec/: Readme.md  requirements.txt
CameraDemo/RealSense/: Readme.md  requirements.txt
DeepNerve/ModelPredict/Resnet/: Readme.md  requirements.txt
DeepNerve/ModelPredict/YOLOV5/: Readme.md
DeepNerve/ModelTrain/YOLOV5/: export.py
GeneralTools/Utilities/: Readme.md  requirements.txt  transform.py
HandEyeCalibrat/: Readme.md  requirements.txt
HandEyeCalibrat/data/: intrinsics.pkl  positions.pkl
HandEyeCalibrat/test/: TRANS_MATRIX.txt  T_cam_robot.pkl  T_robot_cam.pkl
JointPlan/: Readme.md  requirements.txt
JointPlan/core/: interpolat_function.py
PybulletSimulation/: function.py  requirements.txt
PybulletSimulation/model/urdf/: ur5e.urdf
RobotDemo/HansRobot/: CPS.py  Readme.md
RobotDemo/JAKA/: Readme.md  Robot.py
RobotDemo/JAKA/jakaAPI_2.1.2/linux/c&c++/sdk_exampleX64/: CMakeLists.txt  main.cpp
RobotDemo/JAKA/jakaAPI_2.1.2/linux/c&c++/sdk_exampleX64/inc/: JAKAZuRobot.h
TestScript/获取手眼标定数据/: Readme.md
TestScript/获取相机标定数据/: Readme.md
TrajectoryPlan/: Readme.md  requirements.txt
TrajectoryPlan/core/: interpolat_function.py  trajectory.py
gRPCTemplate/: Readme.md
gRPCTemplate/1.0-Simple RPC/: protobuf.proto
gRPCTemplate/3.0-Client-Streaming RPC/: protobuf.proto
gRPCTemplate/4.0-Bidirectional-Streaming RPC/: protobuf.proto
(+62 files in other folders)
